fix overflow

--- a/assets/onecsstorulethemall.css
+++ b/assets/onecsstorulethemall.css
@@ -29,7 +29,6 @@
 body {
     height: 80%;
     width: 100%;
-    overflow: hidden;
     padding: 0;
     margin: 0;
 }
@@ -40,7 +39,6 @@ body {
     align-items: center;
     height: 100%;
     width: 100%;
-    overflow: hidden;
 }
 
 .card {
@@ -113,8 +111,5 @@ body {
     .content {
         width: unset;
         margin: auto;
-    }
-    body {
-        overflow: unset;
     }
 }
